[fix] fixd white space caused by using border-radius and hidden overflow

--- a/source/css/_layout/sidebar/sidebar.styl
+++ b/source/css/_layout/sidebar/sidebar.styl
@@ -2,7 +2,8 @@
   margin: 8px
   height: 'calc(%s - 16px)' % 100vh
   border-radius: $border-card-l
-  overflow: hidden
+  overflow: clip
+  overflow-clip-margin: 1px
   .header
     margin: var(--gap-max) var(--gap-margin) 0
 
